# BSI

./: CMakeLists.txt  README.md  comparing_probability_of_success_of_events.cpp  comparing_probability_of_success_of_events.h  finding_reliability_of_each_element_connected_in_parallel.cpp  finding_reliability_of_each_element_connected_in_parallel.h  main.cpp
Other functions/: convert_decimal_to_fractional_and_number_of_combinations.cpp  convert_decimal_to_fractional_and_number_of_combinations.h
Problems/: comparing_probability_of_success_of_events.cpp  finding_probility_of_two_kids.cpp  finding_reliability_of_each_element_connected_in_parallel.cpp  probability_of_electricity_on_any_day.cpp  probability_of_passing_interview.cpp
Problems/Header files/: comparing_probability_of_success_of_events.h  finding_probility_of_two_kids.h  finding_reliability_of_each_element_connected_in_parallel.h  probability_of_electricity_on_any_day.h  probability_of_passing_interview.h
